whole frontend is modified

--- a/public/success.html
+++ b/public/success.html
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success page</title>
 </head>
 <body>
-    <h1>Success</h1>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+            <div class="success">
+            <h1 class="display-4">CONGRATULATIONS!!!</h1>
+            <p class="lead">This is to acknowledege that you have started a great journey by becoming a part of our family.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
